--- a/coc-settings.json
+++ b/coc-settings.json
@@ -15,6 +15,7 @@
   "clangd.path": "/home/louisdewardt/.config/coc/extensions/coc-clangd-data/install/10.0.0/clangd_10.0.0/bin/clangd",
   "java.format.settings.url": "/home/louis/.config/coc/extensions/node_modules/redhat.java/eclipse-formatter.xml",
   "rust-analyzer.lens.run": false,
+  "rust-analyzer.checkOnSave.command": "clippy",
   "languageserver": {
     "ccls": {
       "command": "ccls",
