--- a/.luarc.json
+++ b/.luarc.json
@@ -1,6 +1,10 @@
 {
-  "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
-  "diagnostics.globals": [
-    "vim"
-  ]
+    "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
+    "Lua.diagnostics.disable": [
+        "need-check-nil"
+    ],
+    "diagnostics.globals": [
+        "vim"
+    ],
+    "runtime.version": "Lua 5.4"
 }
